--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <title>Web Portfolio</title>
-   
+    <title>Masud Web Developer</title>
 </head>
 
 <body>
-
+    <h1>Welcome To</h1>
+    <h1><span class="name-highlight">Masud Rana</span> Website</h1>
+    <h3>World class professional Web Dev</h3>
+    <p>Experienced Web Developer with a demonstrated history of working in the computer software industry. Skilled in React.js, SQL, HTML, CSS, Bootstrap, JavaScript, Node.js and Front-end Development. Strong engineering professional knowledge, I'm graduated from Daffodil International University. </p>
 </body>
 </html>
