--- a/index.html
+++ b/index.html
@@ -10,9 +10,43 @@
 </head>
 
 <body>
-    <h1>Welcome To</h1>
-    <h1><span class="name-highlight">Masud Rana</span> Website</h1>
-    <h3>World class professional Web Dev</h3>
-    <p>Experienced Web Developer with a demonstrated history of working in the computer software industry. Skilled in React.js, SQL, HTML, CSS, Bootstrap, JavaScript, Node.js and Front-end Development. Strong engineering professional knowledge, I'm graduated from Daffodil International University. </p>
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="orange-highlight">Masud Rana</span> Website</h1>
+            <h3>World class professional Web Dev</h3>
+            <p>Experienced Web Developer with a demonstrated history of working in the computer software industry. Skilled in React.js, SQL, HTML, CSS, Bootstrap, JavaScript, Node.js and Front-end Development. Strong engineering professional knowledge, I'm graduated from Daffodil International University. </p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/mdmasudrana-009/"><b>HIRE ME</b></a>
+        </div>
+        <div class="half-width">
+            <img src="/images/jhankar.png" alt="A man with a cup">
+        </div>
+    </section>
+
+    <section class="dream-area">
+        <div class="half-width">
+            <img src="/images/masud1.png" alt="My picture">
+        </div>
+        <div class="half-width">
+            <h2>Dream Big</h2>
+            <h3>Become a Web Developer</h3>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a class="link-button" href="#"><b>Download Resume</b></a>
+        </div>
+    </section>
+
+    <section class="experience-area">
+        <div class="half-width">
+            <h2>Full Stack Web Dev</h2>
+            <h3><span class="orange-highlight" >2021 - Present | Pro level Web Dev</span></h3>
+            <p>I am the master of HTML, CSS, Javascript and React.js. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+        </div>
+        <div  class="half-width">
+            <h2>Baby Web Developer</h2>
+            <h3><span class="orange-highlight">2020-2021 | Programming Hero Learner</span></h3>
+            <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+        </div>
+
+    </section>
 </body>
 </html>
