--- a/index.html
+++ b/index.html
@@ -36,17 +36,23 @@
     </section>
 
     <section class="experience-area">
-        <div class="half-width">
+
+        <h2>Experiences</h2>
+        <div id="full-stack" class="half-width single-experience">
             <h2>Full Stack Web Dev</h2>
             <h3><span class="orange-highlight" >2021 - Present | Pro level Web Dev</span></h3>
             <p>I am the master of HTML, CSS, Javascript and React.js. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
         </div>
-        <div  class="half-width">
+
+        <div id="baby-dev"  class="half-width single-experience">
             <h2>Baby Web Developer</h2>
             <h3><span class="orange-highlight">2020-2021 | Programming Hero Learner</span></h3>
             <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
         </div>
 
     </section>
+    <footer>
+        <p>© Masud Rana 2021, all right reserved.</p>
+    </footer>
 </body>
 </html>
