--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
             <a class="link-button" target="_blank" href="https://www.linkedin.com/in/mdmasudrana-009/"><b>HIRE ME</b></a>
         </div>
         <div class="half-width">
-            <img src="/images/jhankar.png" alt="A man with a cup">
+            <img src="images/jhankar.png" alt="A man with a cup">
         </div>
     </section>
 
     <section class="dream-area">
         <div class="half-width">
-            <img src="/images/masud1.png" alt="My picture">
+            <img src="images/masud1.png" alt="My picture">
         </div>
         <div class="half-width">
             <h2>Dream Big</h2>
